# customer-service/src/components/Customer/CustomerSchema.js
@@ -1,12 +1,7 @@
 import Joi from '@hapi/joi';
 
-
-
 export const postTransaction = Joi.object({
-  id: Joi.number().required(),
-  amount: Joi.number().required(),
+  customerId: Joi.number().required(),
+  amount: Joi.number().min(5).required(),
   narration: Joi.string().trim().optional().allow(''),
 });
-
-
-
